Adding some papers

--- a/paper/implementation.tex
+++ b/paper/implementation.tex
@@ -3,11 +3,6 @@
 
 \NM{} is designed as a drop-in replacement for the default memory allocator. It intercepts all memory allocation/deallocation invocations via the preloading mechanism. Therefore, there is no need to change the source code of applications, and there is no need to use custom OS or hardware. Multiple components that differentiate it from existing allocators are further discussed in the remainder of this section.
 
-%\NA{} aims to reduce remote accesses, and balance the workload among different hardware nodes. It also utilizes huge page support to improve the performance, and designs an interleaved heap to accommodate shared objects. 
- 
-  
-%\NA{} also borrows many known mechanisms of existing allocators. First, it utilizes the size class to manage objects. Instead of allocating the exact size, \NA{} will round the size of an allocation to its closest size class. Similar to TcMalloc~\cite{tcmalloc}, \NA{} also utilizes fine-grained size classes for small objects, such as 16 bytes apart for objects less than 128 bytes, and 32 bytes apart for objects between 128 bytes and 256 bytes, then power-of-2 sizes afterwards. Second, it utilizes the ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' mechanism that all objects in the same bag will have the same size class, and separates the metadata from actual objects. \NA{} only tracks the size information of each page, which helps reduce its memory overhead for the metadata. Third, \NA{} utilizes freelist to manage freed objects. Every freed object will be added into a corresponding freelist, and objects in the freelist will be allocated first in order to reduce possible cache misses. Further, \NA{} utilizes the first word of freed objects to link different objects, which is similar to Linux and TcMalloc~\cite{tcmalloc}. This mechanism helps to reduce the memory overhead, but is prone to memory vulnerabilities, such as buffer overflows and double-frees~\cite{DieHarder, Guarder}.     
-
 \begin{figure*}[h]
 \begin{center}
 \includegraphics[width=0.8\textwidth]{figure/heaplayout}
@@ -19,8 +14,18 @@
 \vspace{-0.1in}
 \end{figure*}
 
-\subsection{Binding-Based Memory Management} 
+\subsection{Origin-Based Memory Management} 
 \label{sec:taskassign}
+
+
+
+For each size class of small objects, \NM{} maintains a freelist for each node and for each thread. Every size class has 16-byte difference when the size is less than 128 bytes, and then 32 bytes apart for objects less than 256 bytes. When an object is larger than 256 bytes, its size class will be always power of two. Except those ones stated in Section~\ref{sec:mainthread}, \NA{} ensures node-aware memory allocations that an allocation is guaranteed to be allocated from the local node physically. \textit{For each deallocation, \NM{} ensures that an object is always placed into a freelist based on the origin of this object}. More specifically, for small objects, it will be placed into the current thread's freelist \textbf{only if} it is originated from the same node that the current thread belongs to. Otherwise, it will be placed to the per-node freelist of its original owner. A big object is always placed into the freelist of its owner. \textit{\NM{} also handles allocations carefully to ensure the locality}. For small objects, an allocation will be satisfied from the freelist of the current thread, where all freed objets is originated from the local node, if there exists some freed objects. Otherwise, the thread will migrate some freed object from the per-node freelist. If its per-node freelist is empty, then it will get a batch of never-used objects from the bag of a size class. Allocations of big objects is always satisfied from per-node freelist first, before getting a new object from the per-node heap.   
+
+
+\textit{Cache Warmup Mechanism:} For small objects, \NM{} also borrows the cache warmup mechanism of TcMalloc~\cite{tcmalloc}. TcMalloc utilizes a \texttt{mmap} system call to obtain multiple pages (depending on the class size) from the OS each time, when it is running out of the memory for one size class. For such a memory block, TcMalloc inserts all objects of this block into its central freelist at one time. Since TcMalloc utilizes the first word of each object as the pointer for the freelist, this mechanism warms up the cache by referencing the first word of each object during the insertion. According to our observation, this warmup mechanism improves the performance of one application (\texttt{raytrace}) by 10\%. Based on our understanding, the performance improvement is caused by data prefetches, since inserting objects to the freelist has a simple and predictable pattern. \NM{} employs a similar mechanism for small objects with the size less than 256 bytes, and adds all objects inside a page to the per-thread freelist. 
+%A bump pointer is used to track the position of never-used objects, whose updates do not require to be exactly one page each time. By comparison, TcMalloc may waste some memory in the end of each block, if the block size is not equal to multiple times of the class size.   
+
+\subsection{Node-Balanced Thread Binding}
 
 Existing allocators typically do not schedule threads explicitly, but relying on the default OS scheduler. The OS scheduler performs very well for the UMA architecture that the latency of accessing the memory controller is the same for every core. However, the NUMA architecture imposes additional challenges~\cite{Majo:2015:LPC:2688500.2688509}. If a thread is migrated to a new node, it can break the locality guarantee. It has to access its own stack remotely and reload all data that is already in cache lines of the old node, resulting in a higher memory latency. Also, it may complicate the memory management of objects in its per-thread cache, as further explained in Section~\ref{sec:intro}. 
 
@@ -30,12 +35,6 @@ To balance the workload of each node, \NA{} utilizes a round-robin manner to ass
 Based on its thread assignment, \NA{} designs a node-aware memory management. Since a user-space memory allocator only deals with virtual memory, but not physical memory, \textit{\NA{} binds a range of virtual memory to a particular node via the \texttt{mbind} system call}. As shown in Fig.\ref{fig:overview}, each node is mapped to four terabytes (TB) initially, and the interleaved heap is placed in a separate place (Section~\ref{sec:mainthread}).  Therefore, \NA{} is able to compute the physical node information based on a virtual address. More specifically, it could divide the offset (from the heap beginning) by the size of each per-node heap to compute its node index. This design takes the advantage of the huge address space of 64-bits machine to achieve the quick lookup.
 
 Each per-node heap is further divided into two parts, one for small objects (managed with the \texttt{bpSmall} bump pointer) and one for big objects (with the \texttt{bpBig} pointer). An object with the size larger than 512 KB will be treated as a big object, and others are small objects. The space for big objects are separated from that for small objects so that we could utilize huge pages for big objects, as discussed in Section~\ref{sec:hugepage}. Another difference between small objects and big objects is that small objects are managed by size classes, while big objects of each node are tracked in a global free list.  For small objects, \NM{} utilizes the ``\textbf{Bi}g-\textbf{B}ag-\textbf{o}f-\textbf{P}ages'' (BiBOP) mechanism that all objects in the same bag will have the same size class, and separates the metadata from actual objects. In order to track the size information of objects, \NM{} utilizes one megabytes (MB) as a basic unit, where the information is tracked in a PerMBInfo data structure (as shown in Fig.~\ref{fig:overview}. A big object in \NM{} is always aligned to megabytes, and small objects in the same MB (called as a bag) will has the same size. For a big object that is larger than 1MB, all corresponding bytes in the PerMBInfo will be set to the specific size upon the allocation. \NM{} embeds the availability information of each chunk to the \texttt{PerMBInfo} structure, using the lowest significant bit of the size. \NM{} is able to coalesce multiple continuous big objects into a bigger object upon deallocations.  
-
-For each size class of small objects, \NM{} maintains a freelist for each node and for each thread. Every size class has 16-byte difference when the size is less than 128 bytes, and then 32 bytes apart for objects less than 256 bytes. When an object is larger than 256 bytes, its size class will be always power of two. Except those ones stated in Section~\ref{sec:mainthread}, \NA{} ensures node-aware memory allocations that an allocation is guaranteed to be allocated from the local node physically. \textit{For each deallocation, \NM{} ensures that an object is always placed into a freelist based on the origin of this object}. More specifically, for small objects, it will be placed into the current thread's freelist \textbf{only if} it is originated from the same node that the current thread belongs to. Otherwise, it will be placed to the per-node freelist of its original owner. A big object is always placed into the freelist of its owner. \textit{\NM{} also handles allocations carefully to ensure the locality}. For small objects, an allocation will be satisfied from the freelist of the current thread, where all freed objets is originated from the local node, if there exists some freed objects. Otherwise, the thread will migrate some freed object from the per-node freelist. If its per-node freelist is empty, then it will get a batch of never-used objects from the bag of a size class. Allocations of big objects is always satisfied from per-node freelist first, before getting a new object from the per-node heap.   
-
-
-\textit{Cache Warmup Mechanism:} For small objects, \NM{} also borrows the cache warmup mechanism of TcMalloc~\cite{tcmalloc}. TcMalloc utilizes a \texttt{mmap} system call to obtain multiple pages (depending on the class size) from the OS each time, when it is running out of the memory for one size class. For such a memory block, TcMalloc inserts all objects of this block into its central freelist at one time. Since TcMalloc utilizes the first word of each object as the pointer for the freelist, this mechanism warms up the cache by referencing the first word of each object during the insertion. According to our observation, this warmup mechanism improves the performance of one application (\texttt{raytrace}) by 10\%. Based on our understanding, the performance improvement is caused by data prefetches, since inserting objects to the freelist has a simple and predictable pattern. \NM{} employs a similar mechanism for small objects with the size less than 256 bytes, and adds all objects inside a page to the per-thread freelist. 
-%A bump pointer is used to track the position of never-used objects, whose updates do not require to be exactly one page each time. By comparison, TcMalloc may waste some memory in the end of each block, if the block size is not equal to multiple times of the class size.   
 
 \subsection{Interleaved Heap} 
 \label{sec:mainthread}
