--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -2,87 +2,46 @@
 \section{Introduction}
 \label{sec:intro}
 
-The Non-Uniform Memory Access (NUMA) architecture is an appealing hardware solution for the scalability of multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller: each processor (also known as a domain or node) consists of multiple cores, while all cores of each node can access its own memory controller. Different nodes are connected via high-speed inter-connection, such as Quick Path Interconnect~\cite{intelqpi} or HyperTransport bus~\cite{hypertransport}, in order to form a cache-coherent system that presents an abstraction of a single globally addressable memory. 
-However, NUMA applications may have serious performance issues, if programs have one of the following issues, such as large amount of remote accesses, load imbalance between different memory controllers, and  interconnect congestion~\cite{Blagodurov:2011:CNC:2002181.2002182, Dashti:2013:TMH:2451116.2451157}, as discussed more in Section~\ref{sec:overview}. 
+The Non-Uniform Memory Access (NUMA) architecture is a scalable hardware design of multi-core era. Compared to Uniform Memory Access (UMA) architecture, the NUMA architecture avoids the bottleneck of using one memory controller, where all cores of each node/processor can access its own memory controller. But the NUMA architecture imposes multiple system challenges for parallel applications, such as remote accesses, interconnect congestion, and node imbalance~\cite{Blagodurov:2011:CNC:2002181.2002182}. For instance, the latency of remote accesses is almost double as that of local accesses. The memory allocator is one such component that could help solve these challenges.   
 
-The NUMA architecture imposes additional challenges for memory management due to its heterogeneity. General-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Scalloc~\cite{Scalloc}, were designed for symmetric multiprocessing machines, without considering the difference between different nodes. Thus, these allocators may cause a large number of remote accesses and load balance issues for multithreaded applications running on the NUMA architecture~\cite{tcmallocnew, yang2019jarena}, which is also confirmed by our evaluations. 
+However, general-purpose memory allocators, such as dlmalloc~\cite{dlmalloc},  Hoard~\cite{Hoard}, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Scalloc~\cite{Scalloc}, were designed for symmetric multiprocessing machines. They do not consider the heterogeneity of the underlying hardware. As a result, they can not achieve good performance, based on existing work~\cite{tcmallocnew, yang2019jarena} and our evaluation. 
 
-%Multiple approaches help improve the performance of NUMA systems. They do not need to change applications explicitly, and they could reduce remote accesses proactively without task or page migration. 
+There exist some NUMA-aware memory allocators~\cite{tcmallocnew, kim2013node, yang2019jarena}. They tried to reduce remote accesses, but with different requirements. For instance, JArena requires the change of applications and OS~\cite{yang2019jarena}, while nMART requires the change of the OS~\cite{kim2013node}.  Kaminski designs the first general-purpose memory allocator that does not require the change of applications and OS ~\cite{tcmallocnew}, called as TcMalloc-NUMA in the remainder of this paper. TcMalloc-NUMA aims to reduce remote accesses: allocations will be satisfied from a per-thread buffer, or the local node initially when there are no available objects in its per-thread buffer; It also proposes per-node freelists to track objects that are considered to originate from the current node. However, \textit{TcMalloc-NUMA has multiple issues that may significantly affect the performance}. First, allocating an object from the local buffer cannot guarantee the locality, if it does not control deallocations. In TcMalloc-NUMA, a freed object is always placed into the deallocating thread's local buffer, a mechanism originated from TcMalloc~\cite{tcmalloc}, even if it is originated from a remote node. This clearly will cause unnecessary remote accesses. % an origin-computable design. Based on this design, we could always return an object back to its original node efficiently.    
+ Second, it may introduce significant remote access, when a thread is migrated to a remote node by the OS: the thread is not only forced to access its stack remotely and reload all data that are already held in the original node; Further, all deallocated objects by this thread will be placed into the new node's freelist afterwards. % node-based task assignment that not only avoids  thread migration across different nodes, but also consider node balance.  
+ Third, TcMalloc-NUMA does not consider interconnect congestion and node imbalance, other notorious reasons that may cause serious performance degradation~\cite{Blagodurov:2011:CNC:2002181.2002182}. % a global 
+ Fourth, it does not take advantage of new hardware feature like huge page support. % explicit huge page management based on allocation/deallocation pattern. 
 
-There exist NUMA-aware memory allocators~\cite{tcmallocnew, kim2013node, yang2019jarena}. Based on our knowledge, Kaminski designs the first NUNA-aware memory allocator~\cite{tcmallocnew}, called  TcMalloc-NUMA in the remainder of this paper.  TcMalloc-NUMA satisfies an allocation from a block of memory that is explicitly bound to a thread's local node. It also introduces per-node freelists to track freed objects for each node: on the one hand, if a per-thread cache has too many freed objects, some objects will be migrated to a per-node freelist that the thread is running on; On the other hand, if a thread is running out of the memory, it will obtain objects from its per-node freelist before obtaining from other freelists. TcMalloc-NUMA improves the performance of some applications by reducing the number of remote accesses~\cite{tcmallocnew}.  The other two papers also utilize a similar approach~\cite{kim2013node, yang2019jarena},  but with different focuses.
-%Due to the explicit binding, it is able to check the locality of a memory block inside the user space, and then return a freed object back to the corresponding node based on the locality. TcMalloc-NUMA achieves some performance speedup for some synthetic applications. 
+%However, there are still multiple issues in these NUMA-aware allocators. In these allocators, the relationship between each thread and each node is not determined beforehand, which is completely relying on the OS scheduler. Although this design may benefit from better resource optimization provided by the OS scheduler, it adds additional overhead by frequently checking the placement of every thread. More importantly, \textit{this design may break the locality guarantee when a thread is migrated to a new node}. First, this thread is forced to access its stack located remotely in the previous node, and reload all data that may already exist in cache lines there. Even worse, after the migration, this thread may  place objects that are originated from the previous node to the freelist of the new node, causing remote accesses unnecessarily afterward.  TcMalloc-NUMA has another serious issue that a freed object is always placed into the cache of the current thread, a design originated from TcMalloc~\cite{tcmalloc}. The per-thread cache was designed to reduce the lock contention faced by multithreaded applications since objects from per-thread cache can be allocated without acquiring any lock. However, remote accesses will be introduced, if an object is freed by a thread that is running on a different node from its allocation thread. Since such an object is placed to the per-thread cache of the deallocation thread, it will be accessed by this thread that is running on the remote node afterward, causing unnecessary remote accesses. 
 
- 
-%Existing NUMA-aware allocators only deals with one aspect of allocation, but forgives other important aspects. 
-
-However, there are still multiple issues in these NUMA-aware allocators. In these allocators, the relationship between each thread and each node is not determined beforehand, which is completely relying on the OS scheduler. Although this design may benefit from better resource optimization provided by the OS scheduler, it adds additional overhead by frequently checking the placement of every thread. More importantly, \textit{this design may break the locality guarantee when a thread is migrated to a new node}. First, this thread is forced to access its stack located remotely in the previous node, and reload all data that may already exist in cache lines there. Even worse, after the migration, this thread may  place objects that are originated from the previous node to the freelist of the new node, causing remote accesses unnecessarily afterward.  TcMalloc-NUMA has another serious issue that a freed object is always placed into the cache of the current thread, a design originated from TcMalloc~\cite{tcmalloc}.  The per-thread cache was designed to reduce the lock contention faced by multithreaded applications since objects from per-thread cache can be allocated without acquiring any lock. However, remote accesses will be introduced, if an object is freed by a thread that is running on a different node from its allocation thread. Since such an object is placed to the per-thread cache of the deallocation thread, it will be accessed by this thread that is running on the remote node afterward, causing unnecessary remote accesses. 
-
-
-%is deallocated by a thread that is different from the allocating thread. For such objects, \TN{} will simply place them into the local cache of the current thread, generating unnecessary remote accesses.  
-
-% It may introduce significant performance issue, and destroy the whole always allocates the memory from the node that the thread is currently running on. But it may introduce the locality issue, when a thread is migrating to a new node, since a thread is forced to access its remote stack, and all cache lines should be reloaded. Further, this design is not tapped with the OS scheduler. As observed by previous study~\cite{Grace}, the OS scheduler typically assigns newly-created threads into the same processor as the parent thread in order to exploit cache locality. However, all pages allocated in the original node will be remote accesses, if a thread is dispatched to a remote node afterward.  
-
-%Second, it does not consider the load balance issue.  All objects that allocated in the main thread but accessed concurrently by multiple children threads will be located in the same node, causing the load imbalance issue. Third, it does not employ the recent progress of the hardware and OS support, such as huge page support. Fourth, its memory management cannot ensure the locality, if an object is deallocated by a thread that is different from the allocating thread. For such objects, \TN{} will simply place them into the local cache of the current thread, generating unnecessary remote accesses.  
-
-
-\begin{comment}
-
-It first assumes that a memory block is belong to the same node for its allocating thread. However, this assumption is invalid, and is also contradict with the first-touch policy of the OS. 
-
-If there is no such assumption, we will expect that the OS will provide an efficient API to query the locality of a page. However, no such APIs exist in both Linux and Windows. 
-
-It checks the physical memory usage to determine the future allocations of the same node or the re-use of a remote node. But that is very slow by checking meminfo. 
-
-In the end, it utilizes the mbind to bind the memory to a node specifically. 
-	
-\end{comment}
-	 
-
-%Based on our evaluation, TcMalloc-NUMA cannot achieve good performance for many applications.  
-%However, none of these systems could achieve the performance promised by the hardware. Given a simple example, if one page is fulled with objects that are utilized by different threads running on different nodes, then it is not able to achieve the best performance no matter where this page is located. Similarly, the passive tracking of memory ownership of an object cannot completely avoid the ownership drifting problem, where the . 
-
-In summary, existing allocators cannot accommodate the heterogeneity of modern hardware and inside applications. 
-On the one hand, the NUMA hardware introduces the heterogeneity between different nodes, with different access latency. On the other hand, objects inside the same application also have heterogeneity in the shared pattern, the allocation pattern, the size, and the ownership. 
-To achieve good performance, memory management requires to perform more fine-grained memory management. This paper proposes such a novel NUMA-aware memory allocator -- \NM{}. Different from existing memory allocators, \NM{} \textit{not only specifies the node relationship for each thread, but also manages objects based on their classifications}. Overall, \NM{} improves both load balance and locality with the following designs.  
+\textbf{This paper proposes a novel NUMA-aware memory allocator -- \NM{} -- that considers both hardware heterogeneity and allocation/deallocation attributes with a fine-grained memory management}. For the fine-grained memory management, \NM{} will not only deal with hardware heterogeneity, but also employ different management policies that were associated with the share-ability, the allocation pattern, and the size of allocations, and the origin of objects. Overall, \NM{} improves both load balance and locality with the following detailed designs.  
 
 %Simply integrating thread binding, heap interleaving and huge page does not guarantee good performance. Instead, carefully design is required to properly coordinate the thread scheduling, memory object allocation/deallocation and huge page management to achieve better performance.
 
-First, \NM{} proposes a \textbf{binding-based memory management} that ensures both load balance and locality. As described above, since cross-node thread migration will bring the performance issue, \NM{} binds every thread to a node to eliminate the cross-node migration. Although the integration of task scheduling with memory management (mostly in OS level) has been proposed before~\cite{Redline, wagle2015numa, diener2015automatic}, \textit{\NM{} is the first memory allocator that is designed based on a special thread binding}. \NM{} only binds a thread to a specific node, but not to a core, which still allows the migration inside the node when necessary. \NM{}'s binding also considers load balance by binding threads to different NUMA nodes in an interleaved way. 
-%That is, a newly-created thread will be always bound to a different node from its predecessor. 
-Because of this interleaved binding policy, each node will have a similar number of threads, ensuring load balance between different nodes (and memory controllers). For memory management, \NM{} further specifies physical page allocations for different ranges of virtual memory and ensures local allocations based on the binding of each thread. In \NM{}, each thread is guaranteed to have local allocations by controlling both every allocation and every deallocation. An allocation is satisfied either from the per-thread cache, or from the freelist or the heap of the current node. \NM{} checks every deallocation to ensure the locality. A freed object is only placed into per-thread cache only if it is originated from the same node. Otherwise, it is returned to its origin node. Due to the binding, \NM{} also ensures that the metadata of each thread and each node is also allocated from the local node, which cannot be done without the thread-binding.
-%Different from TcMalloc-NUMA, \NM{} checks the node locality of each object upon its deallocation, a classification based on the origin of an object, and only places an object into its per-thread cache if it is originated from the same node. Otherwise, the object will be returned to its original node.   
+First, \NM{} proposes \textit{origin-based memory management} in order to ensure that memory allocations are always satisfied from the local node of the requesting thread (called ``local allocations''). The origin-base memory management includes three aspects. First, it includes an \textit{origin-based deallocation} that will place an object based on the origin of the object, which is different from TcMalloc-NUMA: a freed object will be placed into the deallocating thread's local buffer \textit{only if} it is originated from the \textbf{current node} (the current thread is running on); otherwise, it will be returned to its original node. Second, \NM{} includes an \textit{origin-computable design} that the origin of physical pages can be simply inferred with simple computations, since the checking should be performed efficiently in case of extensive deallocations. To achieve this goal, \NM{} requests a huge range of memory from the OS as the heap initially, and then divides it \textbf{evenly} into multiple regions that have the same number as hardware nodes. Each region will be bound to a node physically in a defined order, with the \texttt{mbind} system call. More specifically, the first region is bound to the first node, and the second region is bound to the second node, and so on. Therefore, it is able to compute an object's original node by dividing its heap offset with the region size. The region size is configured to be sufficiently large (e.g., 8TB) so that it could satisfy all requests from threads running on the corresponding node, by taking the advantage of excessively-large virtual address space of 64-bit machines (with 256 TB in total).
+Third, it includes the \textit{origin-based allocation} that will perform the allocations based on the origin of a thread, which node is running on.  Each allocation will be satisfied from the thread's local buffer, the current node's freelist and never-allocated region (that is bound to the current node). Therefore, \NM{} always ensures local allocations, since all objects in the local buffer and the current node's freelist are guaranteed to be originated from this node, due to the origin-based deallocation. 
 
 
-
-% task management altogether, by binding tasks to different NUMA nodes interleavedly and binding the memory explicitly. The task binding not only benefits the load balance, due to its even distribution of tasks, but also constructs the basis for its memory management. In this design, there is no need to query the locality of tasks dynamically, and it is guaranteed to have the correct locality for the memory. 
-  
-Second, \NM{} further proposes \textbf{an interleaved heap} for potentially-shared objects, helping reduce the congestion of one memory controller~\cite{Blagodurov:2011:CNC:2002181.2002182}. Physical pages of the interleaved heap are allocated interleavedly across all physical nodes. But allocating private objects from the interleaved heap may  cause unnecessary remote accesses, although providing a better balance. 
-%For instance, private objects should be always allocated in the local node, instead of from the interleaved heap. 
-\NM{} checks the shared pattern of objects upon allocations, and only allocates potentially-shared objects from the interleaved heap. \NM{} further proposes a heuristics method to determine shared objects, as described in Section~\ref{sec:mainthread}. 
-
- Third, \NM{} further employs \textbf{huge page support} to reduce TLB and cache misses, which further introduces the heterogeneity of hardware. Note that this is different from the default support of transparent huge page (THP), which is observed to hurt the performance for the NUMA architecture~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19}. The default THP may cause unnecessary memory waste and page-level false sharing. Differently, \NM{} classifies each allocation by its size and allocation pattern, limiting huge pages only for big objects and small objects that are allocated extensively. 
- %Therefore, \NM{} minimizes both memory waste and page-level false sharing. 
- Due to this design, \NM{}'s huge page support is never hurting the performance (Section~\ref{sec:hugepage}). 
+Second, \NM{} further proposes a \textit{node-balanced thread binding} and \textit{an interleaved heap} to reduce node imbalance. \NM{} is the first allocator that integrates thread binding, eliminating remote accesses caused by cross-node thread migrations. Note that \NM{} only binds a thread to a specific node, but not to a core, which still allows the OS-initiated inside-node migration when necessary. \NM{} reduces load imbalance with the following methods: first, it binds threads to nodes in a round-robin way so that each node will have a similar number of threads, helping reduce the congestion of memory controllers~\cite{Blagodurov:2011:CNC:2002181.2002182}; second, an interleaved heap is employed to satisfy requests for potentially-shared objects (based on \textbf{sharability} of callsites), where physical pages of this heap are allocated interleavedly across all physical nodes. Due to the thread binding, \NM{} also allocates the metadata of each thread (e.g., per-thread buffer) from the local node, which cannot be done without the binding. The interleaved heap is employed to satisfy allocation requests from the initial thread, in order to reduce load imbalance or interconnect congestion that occurs when a large amount of memory allocated in the initial thread are accessed extensively by children threads running on different nodes. 
+%second, it may cause page-level false sharing, if a multi-page object is accessed concurrently by these threads, the most common NUMA performance detected by existing tools~\cite{XULIU, MemProf}. The underlying reason is that the first-touch policy makes objects allocated from the initial thread will be allocated from its corresponding node, as further described in Section~\ref{sec:ossupport}. The interleaved heap helps node balance, and alleviates page-level false sharing. 
  
- In addition to these mechanisms, \NM{} is implemented very carefully to achieve good performance. It designs mechanisms to quickly locate the locality and size of each object upon deallocations. \NM{} designs an efficient mechanism to move objects between per-thread freelists and  per-node freelists, without iterating objects in the freelists. It also reduces  memory consumption for transparent huge page support by making multiple threads share the same bag. 
+Third, \NM{} further proposes \textbf{explicit huge page support} to reduce TLB and cache misses. Note that this is different from the default support of transparent huge page (THP), which is observed to hurt the performance due to unnecessary memory waste and page-level false sharing~\cite{Gaud:2014:LPM:2643634.2643659, DBLP:conf/asplos/PanwarBG19, DBLP:conf/asplos/MaasAIJMR20}. Differently, \NM{} utilizes a fine-grain policy to control the type of objects that will be allocated from the heap of huge pages, based on the size and allocation pattern. Huge pages will be utilized only for big objects and small objects with extensive allocations. Due to this design, \NM{}'s huge page support is never hurting the performance (Section~\ref{sec:hugepage}). 
  
-% Second, it proactively bound the memory to different nodes, so that it could reduce the . Third, it takes a different method to deal with allocations from main thread, Fourth, it takes the advantage of hardware progress automatically, e.g., huge pages. One application achieves 10\% performance speedup with this consideration.  
+\NM{} is also implemented carefully to achieve good performance. \NM{} designs an efficient mechanism to move objects between per-thread freelists and per-node freelists, without traversing objects in the freelists. It also reduces memory consumption of huge pages by making multiple threads share the same bag. 
 
-
-%There are other implementation issues that may also contribute to the performance improvement. For instance, the metadata will be always allocated locally. The big objects will be re-utilized by small objects automatically, in order to reduce the potential cache misses. 
-
-We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, and Scalloc~\cite{Scalloc}. For the performance on real applications, \NM{} achieves around 13\% speedup on average comparing to the default Linux allocator, which is also 11\% faster than the second-best one. For the best case, \NM{} runs up to $5.8\times$ faster than the default allocator, and $4.7\times$ faster than the second-best one (TcMalloc). For four synthetic applications, \NM{} is running around $2.2\times$ faster on average than the second-best allocator. \NM{} is much more scalable than other allocators. \NM{} is ready for practical employment, due to its high performance, and good scalability. \\
-
-Overall, this paper has the following contributions. 
+We have performed extensive evaluation on synthetic and real applications, and compared \NM{} with popular allocators, such as the default Linux allocator, TcMalloc~\cite{tcmalloc}, jemalloc~\cite{jemalloc}, Intel TBB~\cite{tbb}, and Scalloc~\cite{Scalloc}. \NM{} achieves around 13\% speedup on average comparing to the default Linux allocator, which is also 11\% faster than the second-best one. For the best case, \NM{} runs up to $5.8\times$ faster than the default allocator, and $4.7\times$ faster than the second-best one (TcMalloc). \NM{} is much more scalable than other allocators. \NM{} is ready for practical employment, due to its high performance, and good scalability. Overall, this paper makes the following contributions. 
 
 \begin{itemize}
-\item \NM{} proposes fine-grained memory management to accommodate the heterogeneity of the hardware and applications. 
 
-\item \NM{} proposes binding-based memory management and an interleaved heap that ensures both load balance and locality. It also proposes an allocation policy to take advantage of huge page support.  
-%\item \NM{} proposes fine-grained memory management that is based on the size, the allocation pattern, the shared pattern, the origin of objects, and the location of a thread. 
-\item \NM{} includes multiple careful designs to reduce the performance and memory overhead, such as fast metadata lookup, and efficient object migration. 
+\item \NM{} proposes the \textit{fine-grained memory management} to consider both hardware heterogeneity and different allocation/deallocation attributes.
+
+\item \NM{} proposes the \textit{origin-based memory management} to ensure locality of memory allocations.  
+
+\item \NM{} proposes a \textit{node-balanced thread binding and an interleaved heap} to reduce node imbalance. 
+
+\item \NM{} also proposes explicit huge pages to overcome the issue of transparent huge pages, while keeping the benefits of huge pages. 
 
 \item The extensive experiments confirm that \NM{} has a better performance and scalability than even widely-used industrial allocators. 
+
 \end{itemize}
 
 The remainder of this paper is organized as follows. Section~\ref{sec:overview} introduces the NUMA architecture and the corresponding OS support. Section~\ref{sec:implement} focuses on the design and implementation of \NM{}. After that, Section~\ref{sec:evaluation} describes its experimental evaluation, and Section~\ref{sec:limit} discusses the limitation of \NM{}. In the end, Section\ref{sec:related} discusses some relevant related work, and then Section~\ref{sec:conclusion} concludes. 
